--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
-https://macofanh.github.io/hotel-manager-figma/
+<!DOCTYPE html>
+<html class="light" lang="en"><head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Hotel Management Login</title>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&amp;family=Montserrat:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet"/>
+<script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
+<script>
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        primary: "#FEA116",
+                        "background-light": "#F1F8FF",
+                        "background-dark": "#0F172B",
+                        "card-dark": "#1A202E",
+                        "text-dark-muted": "#A1A1AA",
+                    },
+                    fontFamily: {
+                        display: ["Montserrat", "sans-serif"],
+                        body: ["Heebo", "sans-serif"],
+                    },
+                    borderRadius: {
+                        DEFAULT: "0.25rem",
+                        'lg': '0.5rem',
+                    },
+                },
+            },
+        };
+    </script>
+<style>
+        body {
+            font-family: 'Heebo', sans-serif;
+        }
+        h1, h2, h3, .font-display {
+            font-family: 'Montserrat', sans-serif;
+        }
+    </style>
+</head>
+<body class="bg-background-light dark:bg-background-dark min-h-screen flex items-center justify-center p-4 transition-colors duration-300">
+<button class="fixed top-6 right-6 p-2 rounded-full bg-white dark:bg-card-dark shadow-lg border border-gray-200 dark:border-gray-700 text-gray-600 dark:text-gray-300 hover:text-primary transition-all" onclick="document.documentElement.classList.toggle('dark')">
+<span class="material-icons-outlined block dark:hidden">dark_mode</span>
+<span class="material-icons-outlined hidden dark:block">light_mode</span>
+</button>
+<div class="w-full max-w-md">
+<div class="text-center mb-8">
+<div class="inline-flex items-center justify-center p-3 bg-white dark:bg-card-dark border border-gray-100 dark:border-gray-800 rounded-lg shadow-sm mb-4">
+<span class="material-icons-outlined text-primary text-4xl">apartment</span>
+</div>
+<div class="flex items-center justify-center space-x-2">
+<div class="h-[2px] w-8 bg-primary"></div>
+<span class="text-primary font-bold uppercase tracking-widest text-sm">Welcome Back</span>
+<div class="h-[2px] w-8 bg-primary"></div>
+</div>
+<h1 class="text-3xl font-extrabold mt-2 text-gray-900 dark:text-white uppercase tracking-tight">
+                Hotel <span class="text-primary">Management</span>
+</h1>
+</div>
+<div class="bg-white dark:bg-card-dark p-8 rounded-lg shadow-xl border border-gray-100 dark:border-gray-800">
+<form action="#" class="space-y-6" method="POST">
+<div>
+<label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1" for="identifier">Phone number or Email</label>
+<div class="relative">
+<div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+<span class="material-icons-outlined text-gray-400 text-lg">person</span>
+</div>
+<input class="block w-full pl-10 pr-3 py-3 border border-gray-300 dark:border-gray-700 rounded bg-white dark:bg-gray-800 text-gray-900 dark:text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition-all sm:text-sm" id="identifier" name="identifier" placeholder="Enter your email or phone" required="" type="text"/>
+</div>
+</div>
+<div>
+<div class="flex items-center justify-between mb-1">
+<label class="block text-sm font-medium text-gray-700 dark:text-gray-300" for="password">Password</label>
+</div>
+<div class="relative">
+<div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+<span class="material-icons-outlined text-gray-400 text-lg">lock</span>
+</div>
+<input class="block w-full pl-10 pr-3 py-3 border border-gray-300 dark:border-gray-700 rounded bg-white dark:bg-gray-800 text-gray-900 dark:text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition-all sm:text-sm" id="password" name="password" placeholder="••••••••" required="" type="password"/>
+</div>
+</div>
+<div class="flex items-center justify-between">
+<div class="flex items-center">
+<input class="h-4 w-4 text-primary focus:ring-primary border-gray-300 dark:border-gray-700 rounded bg-white dark:bg-gray-800" id="remember-me" name="remember-me" type="checkbox"/>
+<label class="ml-2 block text-sm text-gray-700 dark:text-gray-400" for="remember-me">Remember me</label>
+</div>
+<div class="text-sm">
+<a class="font-medium text-primary hover:text-orange-600 transition-colors" href="#">Forgot password?</a>
+</div>
+</div>
+<div>
+<button class="group relative w-full flex justify-center py-3 px-4 border border-transparent text-sm font-bold rounded text-white bg-primary hover:bg-orange-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-all duration-200 uppercase tracking-wider" type="submit">
+                        Sign In
+                    </button>
+</div>
+</form>
+<div class="mt-8 pt-6 border-t border-gray-100 dark:border-gray-800 text-center">
+<p class="text-sm text-gray-600 dark:text-gray-400">
+                    Don't have an account? 
+                    <a class="font-bold text-primary hover:underline ml-1" href="#">Register now</a>
+</p>
+</div>
+</div>
+<div class="mt-8 text-center text-xs text-gray-500 dark:text-text-dark-muted">
+<p>© 2023 Hotel Management System. All rights reserved.</p>
+<div class="mt-2 flex justify-center space-x-4">
+<a class="hover:text-primary" href="#">Privacy Policy</a>
+<span>•</span>
+<a class="hover:text-primary" href="#">Terms of Service</a>
+</div>
+</div>
+</div>
+
+</body></html>
